<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/fav_menu"
        android:title="Favorite"
        app:showAsAction="always"
        android:icon="@drawable/ic_fav_menu"/>
    <group android:menuCategory="container">
        <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings_reminder"
            android:title="@string/settings_reminder"
            app:showAsAction="never" />

    </group>
</menu>